1. Fixed filtering issue in published details page to get only the latest published articles 2. Stopped page redirection while click the delete icon in the article list page 3. Aligned the Publish and Draft (Square) icons with proper spacing 4. Removed (zoom) effect in cards while hover 5. Make the card height as fixed for different aspect ratio

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -195,11 +195,12 @@ input[type="text"], textarea, select, button {
 .inner{
     overflow: hidden;
 }
+
+// Card Zoom Effects
+// .inner img{
+//     transition: all 1.5s ease;
+// }
  
-.inner img{
-    transition: all 1.5s ease;
-}
- 
-.inner:hover img{
-    transform: scale(1.5);
-}
+// .inner:hover img{
+//     transform: scale(1.5);
+// }
